<resources>
    <string name="app_name">DMZ</string>
    <string name="browse">탐색</string>
    <string name="quiz">퀴즈</string>
    <string name="home">홈</string>
    <string name="search">검색</string>
    <string name="my_profile">내 정보</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_history">SEARCH HISTORY</string>
    <string name="search_input">검색어 입력</string>
    <string name="set_region">국가 설정</string>
    <string name="set_sort">정렬 설정</string>
    <string name="set_date">날짜 설정</string>
    <string name="search_result">SEARCH RESULT</string>

    <!-- common -->
    <string name="common_video_thumbnail">영상 썸네일</string>
    <string name="common_channel_thumbnail">채널 썸네일</string>
    <string name="common_keyword_thumbnail">키워드 썸네일</string>

    <!-- common: shared preference -->
    <string name="preference_file_key">preference_dmz</string>
    <string name="preference_bookmark_key">preference_bookmark</string>
    <string name="preference_keyword_card_key">preference_keyword_card</string>
    <string name="preference_recent_search_key">preference_recent_search</string>

    <!-- detail page -->
    <string name="detail_video_info">영상 정보</string>
    <string name="detail_published_date">게시 날짜</string>
    <string name="detail_view_count">조회수</string>
    <string name="detail_comment_count">댓글</string>
    <string name="detail_like_count">좋아요</string>
    <string name="detail_subscriber_count">채널 구독자수</string>
    <string name="detail_video_count">동영상</string>
    <string name="detail_bookmark_button_save">북마크 저장</string>
    <string name="detail_bookmark_button_cancel">북마크 취소</string>
    <string name="detail_num_of_counts">%s개</string>
    <string name="detail_num_of_times">%s회</string>
    <string name="detail_num_of_people">%s명</string>

    <!-- my page -->
    <string name="my_page_title">My Page</string>
    <string name="my_page_user_name">김태영</string>
    <string name="my_page_user_gender">여</string>
    <string name="my_page_profile_image">프로필 이미지</string>
    <string name="my_page_video_view_count">조회수 %s회</string>
    <string name="my_page_more">더보기</string>
    <string name="my_page_card_count">모은 카드 수</string>
    <string name="my_page_gender">성별</string>
    <string name="my_page_joined_date">가입한지</string>


    <!-- browse Activity -->
    <string name="browse_game">GAME</string>
    <string name="browse_life_style">LIFE STYLE</string>
    <string name="browse_music">MUSIC</string>
    <string name="browse_sports">SPORTS</string>
    <string name="browse_movie">MOVIE</string>

    <string name="browse_channel_title">채널 추천</string>
    <string name="browse_video_title">동영상 추천</string>
    <string name="browse_channel_holder_desc_title">채널 설명</string>
    <string name = "music_motion_letter_m">M</string>
    <string name = "music_motion_letter_u">U</string>
    <string name = "music_motion_letter_s">S</string>
    <string name = "music_motion_letter_i">I</string>
    <string name = "music_motion_letter_c">C</string>
    <string-array name="spinner_items">
        <item>한국</item>
        <item>미국</item>
        <item>영국</item>
        <item>일본</item>
    </string-array>

    <!-- bookmark page -->
    <string name="bookmark_title">Bookmark</string>
    <string name="bookmark_back">뒤로가기</string>

    <!-- quiz page -->
    <string name="quiz_intro">오늘 알아볼\nMZ 키워드는?</string>
    <string name="quiz_number">Quiz %d</string>
    <string name="quiz_result_title">결과</string>
    <string name="quiz_result">%d문제 맞췄습니다!</string>
    <string name="quiz_button_next">다음으로</string>
    <string name="quiz_button_submit">제출하기</string>
    <string name="quiz_button_start">수집하러가기</string>
    <string name="quiz_button_collect">카드 획득하기</string>
    <string name="quiz_button_back">돌아가기</string>

</resources>