<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="32dp"
    android:paddingTop="50dp"
    android:paddingBottom="60dp"
    tools:background="@color/black"
    tools:context=".ui.quiz.ResultFragment">

    <TextView
        android:id="@+id/tv_quiz_result_title"
        style="@style/headline_b_p"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/quiz_result_title"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_quiz_result"
        style="@style/headline_b_p"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/quiz_result"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_quiz_result_title" />

    <ImageView
        android:id="@+id/iv_quiz_result_keyword_image"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:background="@drawable/shape_corner_radius_30dp"
        android:clipToOutline="true"
        android:contentDescription="@string/common_keyword_thumbnail"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toTopOf="@id/tv_quiz_result_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_quiz_result" />

    <TextView
        android:id="@+id/tv_quiz_result_button"
        style="@style/subtitle_p"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_corner_radius_10dp_border"
        android:backgroundTint="@color/flou_yellow"
        android:backgroundTintMode="multiply"
        android:gravity="center|center_vertical"
        android:paddingVertical="16dp"
        android:text="@string/quiz_button_back"
        android:textColor="@color/flou_yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>