<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_browse"
        android:name="com.example.dmz.ui.BrowseFragment"
        android:label="@string/browse"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.dmz.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_navigation_search_to_navigation_search_result"
            app:destination="@id/navigation_search_result" />
    </fragment>
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dmz.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_quiz"
        android:name="com.example.dmz.ui.quiz.StartFragment"
        android:label="@string/quiz"
        tools:layout="@layout/fragment_start">
        <action
            android:id="@+id/action_quiz_start_to_quiz_question"
            app:destination="@id/navigation_quiz_question" />
    </fragment>
    <fragment
        android:id="@+id/navigation_my_profile"
        android:name="com.example.dmz.ui.mypage.MyPageFragment"
        android:label="@string/my_profile"
        tools:layout="@layout/fragment_my_page">
        <action
            android:id="@+id/action_my_page_to_detail"
            app:destination="@id/navigation_detail"
            app:enterAnim="@null"
            app:exitAnim="@null"
            app:popEnterAnim="@null"
            app:popExitAnim="@null">
            <argument
                android:name="videoId"
                app:argType="string" />
            <argument
                android:name="thumbnail"
                app:argType="string" />
        </action>
        <action
            android:id="@+id/action_my_page_to_bookmark"
            app:destination="@id/navigation_bookmark"
            app:enterAnim="@anim/slide_in_right" />
    </fragment>
    <fragment
        android:id="@+id/navigation_search_result"
        android:name="com.example.dmz.ui.search.SearchResultFragment"
        android:label="검색 결과 화면"
        tools:layout="@layout/fragment_search_result">
        <action
            android:id="@+id/action_navigation_search_result_to_navigation_detail"
            app:destination="@id/navigation_detail">
            <argument
                android:name="videoId"
                app:argType="string" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.example.dmz.ui.detail.DetailFragment"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="videoId"
            app:argType="string" />
        <argument
            android:name="thumbnail"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.example.dmz.ui.mypage.BookmarkFragment"
        tools:layout="@layout/fragment_bookmark">
        <action
            android:id="@+id/action_bookmark_to_detail"
            app:destination="@id/navigation_detail">
            <argument
                android:name="videoId"
                app:argType="string" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/navigation_quiz_question"
        android:name="com.example.dmz.ui.quiz.QuizFragment">
        <action
            android:id="@+id/action_quiz_question_to_navigation_quiz_result"
            app:destination="@id/navigation_quiz_result">
            <argument
                android:name="score"
                app:argType="integer" />
            <argument
                android:name="keyword"
                app:argType="com.example.dmz.data.model.Keywords" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/navigation_quiz_result"
        android:name="com.example.dmz.ui.quiz.ResultFragment">
        <argument
            android:name="score"
            app:argType="integer" />
        <argument
            android:name="keyword"
            app:argType="com.example.dmz.data.model.Keywords" />
        <action
            android:id="@+id/action_quiz_result_to_bookmark"
            app:destination="@id/navigation_bookmark" />
        <action
            android:id="@+id/action_quiz_result_to_quiz_start"
            app:destination="@id/navigation_quiz" />
    </fragment>
</navigation>