<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cl_browse_list"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@color/black">

    <TextView
        android:id="@+id/tv_topbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/headline_b_p"
        android:textColor="@color/white"
        tools:text="GAME"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.skydoves.powerspinner.PowerSpinnerView
        android:id="@+id/spinner_select_region"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_height="wrap_content"
        android:background="@drawable/background_spinner"
        style="@style/body_p"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="2dp"
        app:spinner_item_array="@array/spinner_items"
        app:spinner_item_height="24dp"
        app:spinner_popup_top_padding="8dp"
        app:spinner_popup_bottom_padding="8dp"
        app:spinner_popup_background="@color/black"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toTopOf="@id/tv_topbar_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_topbar_title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_topbar_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_nsv_list"
            android:layout_width="match_parent"
            android:layout_height="700dp">

            <TextView
                android:id="@+id/tv_channel_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/subtitle_b_p"
                android:textColor="@color/white"
                android:layout_marginTop="64dp"
                android:text="@string/browse_game"
                android:layout_marginStart="32dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_channel_title_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/subtitle_b_p"
                android:textColor="@color/white"
                android:text="@string/browse_channel_title"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@id/tv_channel_title"
                app:layout_constraintStart_toEndOf="@id/tv_channel_title"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_category_channel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="@id/tv_channel_title"
                app:layout_constraintTop_toBottomOf="@id/tv_channel_title"/>


            <TextView
                android:id="@+id/tv_video_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/browse_game"
                style="@style/subtitle_b_p"
                android:textColor="@color/white"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@id/rv_category_channel"
                app:layout_constraintStart_toStartOf="@id/tv_channel_title"/>

            <TextView
                android:id="@+id/tv_video_title_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/browse_video_title"
                style="@style/subtitle_b_p"
                android:textColor="@color/white"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/tv_video_title"
                app:layout_constraintTop_toTopOf="@id/tv_video_title"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_category_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@id/tv_video_title"/>





        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>








</androidx.constraintlayout.widget.ConstraintLayout>